Remove distribution files for userscript from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+dist/*
+
+# distribute the userscript
+!dist/*.user.js
+
 dist-ssr
 *.local
 
